@@ -1,8 +1,16 @@
+2014-10-07 Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/misc.c (lf_push lf_pop):  If lf_push/lf_pop are invoked from
+	do_string_and_free to handle bracketed if{} or do{} expressions, they
+	should not touch the call arguments ARG1, ARG2, ...  Save/restore of the
+	call arguments is only needed if lf_push/lf_pop are invoked by "call".
+	Bug #1494
+
 2014-10-05 Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/axis.h src/set.c (set_format):
 
-	Timefmt revsion part 6
+	Timefmt revision part 6
 	- Add tictype keywords to "set format {axis} {time|geographic|numeric}"
 	- Reset to numeric on "unset format"
 
